<resources>
    <string name="app_name">Move It</string>
    <string name="creator">Created by Larissa Cardoso Zimmermann</string>
    <string name="logo_splash">LogoSplash</string>
    <string name="linkedin">Linkedin</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="network_connection_error">Network is not connected!</string>
    <string name="check_network_connection">Check your network connection!</string>
    <string name="connection_error">Connection Error</string>
    <string name="move_it_database_name">move_it_database</string>
    <string name="card_view_title">Title</string>
    <string name="card_view_subtitle">Subtitle</string>
    <string name="action_details">See Project</string>
    <string name="project_name">Project Name</string>
    <string name="action_add_project">Add Project</string>
    <string name="project_not_saved">It was not possible to save the project!</string>
    <string name="delete_project">Delete Project ?</string>
    <string name="are_you_sure_delete_project">Do you really want to delete the project?</string>
    <string name="activity_label_name">Activity Name</string>
    <string name="add_activity_label">Add New Activity</string>
    <string name="enter_new_activity_label">Enter Activity Label</string>
    <string name="enter_activity_label">Enter Activity Label</string>
    <string name="save_new_activity_label">Add Activity</string>
    <string name="delete_activity">Delete Activity</string>
    <string name="are_you_sure_delete_activity">Are you sure you want to delete Activity?</string>
    <string name="delete_volunteer">Delete Volunteer</string>
    <string name="are_you_sure_delete_volunteer">Are you sure you want to delete Volunteer?</string>
    <string name="add_volunteer">Add New Volunteer</string>
    <string name="volunteer_name">Volunteer Name</string>
    <string name="volunteer_email">Volunteer Email</string>
    <string name="volunteer_birthday">Volunteer Birthday</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unknown">Unknown</string>
    <string name="action_add_volunteer">Add Volunteer</string>
    <string name="birthday">Birthday</string>
    <string name="action_generate_csv">Generate CSV</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="email">E-mail</string>
    <string name="activities">Activities</string>
    <string name="years">years</string>
    <string name="action_collect">Collect</string>
    <string name="generate_csv_file">Generate CSV File</string>
    <string name="are_you_sure_generate_csv_file">Are you sure you want to generate CSV File?</string>
    <string name="chronometer_stopped">Stop collecting data</string>
    <string name="chronometer_paused">Pause collecting data</string>
    <string name="chronometer_play">Start collecting data</string>
    <string name="write_external_storage_permission_not_grant">Write External Storage Permission not granted!</string>
    <string name="data_from_activity_removed">Data collect was removed!</string>
    <string name="delete_data_collected">Delete Data Collected</string>
    <string name="are_yousure_delete_data_collected">Are you sure you want to delete the data collected?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="researcher_name">Researcher Name</string>
    <string name="academic_institute">Academic Institute</string>
    <string name="action_start">Start Experience</string>
    <string name="required_field">Required Field</string>
    <string name="select_at_least_one">Select at least one</string>
    <string name="profile_photo">Profile_Photo</string>
    <string name="project_was_created">Project was successfully created</string>
    <string name="add_new_project">Add New Project</string>
    <string name="project_was_not_created">Project was not created</string>
    <string name="enter_project_label">Enter with a Project name:</string>
    <string name="project_name_transition">ProjectNameTransition</string>
    <string name="activity_was_created">Activity was created</string>
    <string name="activity_was_not_created">Activity was not created</string>
    <string name="volunteer_was_not_created">Volunteer was not created</string>
    <string name="volunteer_removed">Volunteer was removed</string>
    <string name="save_new_volunteer">Add Volunteer</string>
    <string name="all_fields_are_required">All fields are required. Voluntter was not added.</string>
    <string name="share_csv_file">[Move It] %1$s CSV File</string>
    <string name="text_share_csv_file">Hi! Here is attached your project CSV File.</string>
    <string name="share_file">Share File</string>
    <string name="csv_file_generated">CSV File was successfully generated</string>
    <string name="csv_file_was_not_generated">Something went wrong. CSV was not generated.</string>
    <string name="volunteer_was_not_removed">It is not possible remove Volunteer</string>
    <string name="activity_was_removed">Activity was removed</string>
    <string name="activity_was_not_removed">It was not possible to remove activity</string>
    <string name="project_was_removed">Project was removed</string>
    <string name="project_was_not_removed">It was not possible to remove project</string>
    <string name="project">Project</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="activity">Activity</string>
    <string name="app_bar_description">AppBar view</string>
    <string name="chronometer_view">Chronometer view</string>
    <string name="chronometer_view_play_button">Chronometer view, play button</string>
    <string name="chronometer_view_pause_button">Chronometer view pause button</string>
    <string name="chronometer_view_stop_button">Chronometer view, stop button</string>
    <string name="logo_description">Logo description</string>
    <string name="widget_toolbar_view_description">Widget toolbar view description</string>
    <string name="folder_file_container">Folder image that indicates if the file was generated</string>
    <string name="created_word">Created on</string>
</resources>
