<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:transitionName="@string/logo_splash"
        android:contentDescription="@string/logo_description"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="bottom|center_horizontal"
        android:text="@string/creator"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/subtitle_splash"
        android:layout_alignParentLeft="true"
        android:paddingBottom="@dimen/text_input_layout_padding"/>

</RelativeLayout>