<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.ResearcherRegisterFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logo_width_small"
        android:layout_height="@dimen/logo_height_small"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/logo_margin_small"
        android:src="@drawable/logo"
        android:transitionName="@string/logo_splash" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/ivProfilePhoto"
        android:layout_width="@dimen/profile_image_width"
        android:layout_height="@dimen/profile_image_height"
        android:layout_marginTop="@dimen/profile_image_margin"
        android:layout_gravity="center_horizontal"
        android:transitionName="@string/profile_photo"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilAcademicInstitute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_input_layout_margin">

        <EditText
            android:id="@+id/etAcademicInstitute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="text"
            android:textColor="@color/colorAccent"
            android:hint="@string/academic_institute" />

    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_input_layout_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilResearcherBirthday"
            android:layout_width="@dimen/birthdate_width_bigger"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/etResearcherBirthday"
                android:layout_width="@dimen/birthdate_width_bigger"
                android:layout_height="wrap_content"
                android:hint="@string/volunteer_birthday"
                android:inputType="date"
                android:textColor="@color/colorAccent"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btAddDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:drawableEnd="@drawable/ic_date_range_24dp"
            android:theme="@style/PrimaryFlatButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/radio_group_margin_start"
        android:gravity="center_horizontal|center_vertical"
        android:layout_margin="@dimen/text_input_layout_margin">

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:gravity="center_vertical"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:gravity="center_vertical"
            android:text="@string/male" />
    </RadioGroup>

    <Button
        android:id="@+id/btAdditionalInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_start"
        android:theme="@style/PrimaryFlatButton"
        android:layout_gravity="center_horizontal|center_vertical"/>

</LinearLayout>