<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/border_primary">

    <TextView
        android:id="@+id/project_name_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/card_view_margin_16dp"
        android:layout_marginEnd="@dimen/card_view_margin_16dp"
        android:layout_marginTop="@dimen/card_view_margin_16dp"
        android:hint="@string/card_view_title"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/headline6"
        android:transitionName="@string/project_name_transition"/>

    <Button
        android:id="@+id/project_details_button_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_details"
        android:theme="@style/PrimaryFlatButtonWhite"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/card_view_margin_8dp"
        android:layout_marginBottom="@dimen/card_view_margin_8dp"
        android:gravity="end|bottom"/>

</LinearLayout>