<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/card_view_spacing"
    android:elevation="@dimen/card_view_elevation"
    android:clickable="true"
    android:focusable="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/card_view_margin_16dp"
            android:layout_marginEnd="@dimen/card_view_margin_16dp"
            android:layout_marginTop="@dimen/card_view_margin_16dp"
            android:hint="@string/card_view_title"
            android:fontFamily="@font/black"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/headline6"
            android:transitionName="@string/project_name_transition"/>

        <TextView
            android:id="@+id/project_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/project_name"
            app:layout_constraintStart_toStartOf="@id/project_name"
            android:layout_marginEnd="@dimen/card_view_margin_16dp"
            android:layout_marginTop="@dimen/card_view_margin_8dp"
            android:paddingBottom="@dimen/card_view_margin_8dp"
            android:layout_marginBottom="@dimen/card_view_margin_8dp"
            android:hint="@string/card_view_subtitle"

            android:fontFamily="@font/worksansregular"
            android:textSize="@dimen/body1"/>

        <Button
            android:id="@+id/project_details_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_details"
            android:theme="@style/PrimaryFlatButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/project_start_date"
            android:layout_marginStart="@dimen/card_view_margin_8dp"
            android:layout_marginBottom="@dimen/card_view_margin_8dp"
            android:layout_marginTop="@dimen/card_view_margin_8dp"/>

    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>